🐛 fix: adjust "bookmarks" width on small screens

--- a/src/sass/layout/_bookmarks.scss
+++ b/src/sass/layout/_bookmarks.scss
@@ -9,6 +9,7 @@
   z-index: 100;
   background-color: $color-white;
   box-shadow: $box-shadow-3;
+  // border: 1px solid #000;
 
   &:not(.show) {
     display: none;
@@ -18,6 +19,16 @@
     position: absolute;
     top: calc(1.1rem - 1px);
     left: calc(-35px - calc(1rem - 1px));
+  }
+
+  @include respond-to(320px, 'max-width') {
+    width: min(100%, 400px);
+    padding-top: 3rem;
+
+    &__btn {
+      top: 0.5rem;
+      left: 0.5rem;
+    }
   }
 
   @include respond-to(768px) {
